--- a/rollup/core/classes/RollupParentResetProcessor.cls
+++ b/rollup/core/classes/RollupParentResetProcessor.cls
@@ -5,16 +5,16 @@ public without sharing class RollupParentResetProcessor extends RollupFullBatchR
 
   private Integer countOfItems;
 
-  private without sharing class QueueableResetProcessor implements System.Queueable {
+  private without sharing class QueueableResetProcessor extends RollupAsyncProcessor.QueueableProcessor {
     private final RollupParentResetProcessor processor;
     private final Integer batchChunkSize;
     private QueueableResetProcessor(RollupParentResetProcessor processor, Integer batchChunkSize) {
+      super(processor.invokePoint);
       this.processor = processor;
       this.batchChunkSize = batchChunkSize;
     }
 
-    public void execute(System.QueueableContext qc) {
-      System.attachFinalizer(new RollupFinalizer());
+    protected override void performWork() {
       if (this.processor.getNumberOfItems() > maxQueryRows) {
         Database.executeBatch(this.processor, this.batchChunkSize);
       } else {
