Further cleanup of inherited methods/contexts to aid in logging/debugging and general cleanliness

--- a/rollup/core/classes/RollupDeferredFullRecalcProcessor.cls
+++ b/rollup/core/classes/RollupDeferredFullRecalcProcessor.cls
@@ -1,4 +1,6 @@
 public without sharing virtual class RollupDeferredFullRecalcProcessor extends RollupFullRecalcProcessor {
+  private static final Map<String, List<SObject>> QUERY_TO_CALC_ITEMS = new Map<String, List<SObject>>();
+
   public RollupDeferredFullRecalcProcessor(
     List<Rollup__mdt> matchingMeta,
     SObjectType calcItemType,
@@ -16,5 +18,15 @@ public without sharing virtual class RollupDeferredFullRecalcProcessor extends R
 
   protected override String getTypeName() {
     return RollupDeferredFullRecalcProcessor.class.getName();
+  }
+
+  protected List<SObject> getCalcItems() {
+    if (QUERY_TO_CALC_ITEMS.containsKey(this.queryString)) {
+      this.logger.log('returning pre-queried records from cache', LoggingLevel.FINE);
+      return QUERY_TO_CALC_ITEMS.get(this.queryString);
+    }
+    List<SObject> localCalcItems = Database.query(this.queryString);
+    QUERY_TO_CALC_ITEMS.put(this.queryString, localCalcItems);
+    return localCalcItems;
   }
 }
