Updated RollupTests to be more lean. Provided a much-needed bump for the Apex Rollup - Extra Code Coverage plugin

--- a/extra-tests/classes/RollupTestUtils.cls
+++ b/extra-tests/classes/RollupTestUtils.cls
@@ -43,9 +43,9 @@ public class RollupTestUtils {
     return loadMock(records);
   }
 
-  public static DMLMock getTaskMock(List<SObject> records, Id cpaId) {
+  public static DMLMock getWhatIdMock(List<SObject> records, Id whatId) {
     for (SObject task : records) {
-      task.put('WhatId', cpaId);
+      task.put('WhatId', whatId);
     }
     return loadMock(records);
   }
